Fix: scroll on mobile map panel layout

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,3 +1,5 @@
-.container {
-	height: 100%;
+@media screen and (min-width: 768px) {
+  .container {
+    height: 100%;
+  }
 }
